--- a/VidCoder/Themes/Dark.xaml
+++ b/VidCoder/Themes/Dark.xaml
@@ -8,8 +8,9 @@
 	<SolidColorBrush x:Key="ToolBarBackgroundBrush" Color="#555555" />
 	<SolidColorBrush x:Key="WindowBrush" Color="Black" />
 	<SolidColorBrush x:Key="WindowTextBrush" Color="White" />
-	<SolidColorBrush x:Key="WindowBorderBrush" Color="#333333" />
-	<SolidColorBrush x:Key="WindowTitleBarInactiveText" Color="#AAAAAA" />
+	<SolidColorBrush x:Key="WindowInactiveBorderBrush" Color="#333333" />
+	<SolidColorBrush x:Key="WindowActiveBorderBrush" Color="#5B5B5B" />
+	<SolidColorBrush x:Key="WindowTitleBarInactiveBackground" Color="#353535" />
 	<SolidColorBrush x:Key="SplitterBrush" Color="#636363" />
 	<SolidColorBrush x:Key="SpecialTextBrush" Color="#70C9FF" />
 	<SolidColorBrush x:Key="SpecialTextHighlightedBrush" Color="#70C9FF" />
