--- a/VidCoder/View/ChooseName.xaml
+++ b/VidCoder/View/ChooseName.xaml
@@ -24,7 +24,11 @@
                 <RowDefinition Height="Auto" />
                 <RowDefinition />
             </Grid.RowDefinitions>
-            <controls:ToolWindowTitleBar Title="{Binding Title}" Grid.Row="0" />
+            <controls:ToolWindowTitleBar
+                Title="{Binding Title}"
+                Grid.Row="0"
+                IsActive="{Binding IsActive,
+                                   RelativeSource={RelativeSource AncestorType=Window}}" />
             <Grid Grid.Row="1">
                 <TextBlock
                     Margin="12 12 0 0"
