--- a/VidCoder/View/PreviewWindow.xaml
+++ b/VidCoder/View/PreviewWindow.xaml
@@ -51,7 +51,9 @@
             <controls:ToolWindowTitleBar
                 Title="{Binding Title}"
                 Grid.Row="0"
-                Icon="/Icons/Preview64.png" />
+                Icon="/Icons/Preview64.png"
+                IsActive="{Binding IsActive,
+                                   RelativeSource={RelativeSource AncestorType=Window}}" />
 
             <Grid
                 Name="previewArea"
