Added checkbox control template override to give it predictable coloring in dark mode and with custom OS themes.

--- a/VidCoder/App.xaml
+++ b/VidCoder/App.xaml
@@ -4,10 +4,7 @@
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
     xmlns:controls="clr-namespace:VidCoder.Controls"
     xmlns:converters="clr-namespace:VidCoder.Converters"
-    xmlns:mwt="clr-namespace:Microsoft.Windows.Themes;assembly=PresentationFramework.Aero"
     xmlns:res="clr-namespace:VidCoder.Resources"
-    xmlns:s="clr-namespace:System;assembly=mscorlib"
-    xmlns:selectors="clr-namespace:VidCoder.View.Selectors"
     xmlns:vidCoder="clr-namespace:VidCoder">
     <Application.Resources>
         <ResourceDictionary>
@@ -16,7 +13,8 @@
                 <ResourceDictionary Source="pack://application:,,,/Fluent;Component/Themes/Generic.xaml" />
 
                 <ResourceDictionary Source="/XamlResources/Button.xaml" />
-                <ResourceDictionary Source="/XamlResources/TextBox.xaml" />
+				<ResourceDictionary Source="/XamlResources/CheckBox.xaml" />
+				<ResourceDictionary Source="/XamlResources/TextBox.xaml" />
                 <ResourceDictionary Source="/XamlResources/ComboBox.xaml" />
                 <ResourceDictionary Source="/XamlResources/GridViewColumnHeader.xaml" />
                 <ResourceDictionary Source="/XamlResources/ListView.xaml" />
@@ -44,72 +42,13 @@
             <Color x:Key="PresetGlowColor">#1696FF</Color>
 
 
-            <Style x:Key="GrayOnDisabledControl" TargetType="{x:Type Control}">
-                <Style.Triggers>
-                    <DataTrigger Binding="{Binding IsEnabled, RelativeSource={RelativeSource Self}}" Value="False">
-                        <Setter Property="Foreground" Value="#999999" />
-                    </DataTrigger>
-                </Style.Triggers>
-            </Style>
-
-
-            <Style x:Key="CenteredCheckBox" TargetType="{x:Type CheckBox}">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="{x:Type CheckBox}">
-                            <BulletDecorator Background="#00FFFFFF" SnapsToDevicePixels="True">
-                                <mwt:BulletChrome
-                                    Width="13"
-                                    Height="13"
-                                    Background="{TemplateBinding Panel.Background}"
-                                    BorderBrush="{TemplateBinding Border.BorderBrush}"
-                                    IsChecked="{TemplateBinding IsChecked}"
-                                    RenderMouseOver="{TemplateBinding IsMouseOver}"
-                                    RenderPressed="{TemplateBinding IsPressed}" />
-                            </BulletDecorator>
-                            <ControlTemplate.Triggers>
-                                <Trigger Property="HasContent">
-                                    <Trigger.Value>
-                                        <s:Boolean>True</s:Boolean>
-                                    </Trigger.Value>
-                                    <Setter Property="FocusVisualStyle">
-                                        <Setter.Value>
-                                            <Style TargetType="{x:Type IFrameworkInputElement}">
-                                                <Style.Resources>
-                                                    <ResourceDictionary />
-                                                </Style.Resources>
-                                                <Setter Property="Control.Template">
-                                                    <Setter.Value>
-                                                        <ControlTemplate>
-                                                            <Rectangle
-                                                                Margin="14 0 0 0"
-                                                                SnapsToDevicePixels="True"
-                                                                Stroke="{DynamicResource {x:Static SystemColors.ControlTextBrushKey}}"
-                                                                StrokeDashArray="1 2"
-                                                                StrokeThickness="1" />
-                                                        </ControlTemplate>
-                                                    </Setter.Value>
-                                                </Setter>
-                                            </Style>
-                                        </Setter.Value>
-                                    </Setter>
-                                    <Setter Property="Padding">
-                                        <Setter.Value>
-                                            <Thickness>0,0,0,0</Thickness>
-                                        </Setter.Value>
-                                    </Setter>
-                                </Trigger>
-                                <Trigger Property="IsEnabled">
-                                    <Trigger.Value>
-                                        <s:Boolean>False</s:Boolean>
-                                    </Trigger.Value>
-                                    <Setter Property="TextElement.Foreground" Value="{DynamicResource {x:Static SystemColors.GrayTextBrushKey}}" />
-                                </Trigger>
-                            </ControlTemplate.Triggers>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
+			<Style x:Key="GrayOnDisabledControl" TargetType="{x:Type Control}">
+				<Style.Triggers>
+					<DataTrigger Binding="{Binding IsEnabled, RelativeSource={RelativeSource Self}}" Value="False">
+						<Setter Property="Foreground" Value="#999999" />
+					</DataTrigger>
+				</Style.Triggers>
+			</Style>
 
             <Style x:Key="GrayNonCompatible" TargetType="{x:Type ComboBoxItem}">
                 <Style.Triggers>
@@ -331,29 +270,29 @@
                 </Setter>
             </Style>
 
-            <ControlTemplate x:Key="PopupInfoTemplate" TargetType="{x:Type ContentControl}">
-                <Border
+			<ControlTemplate x:Key="PopupInfoTemplate" TargetType="{x:Type ContentControl}">
+				<Border
                     Background="{DynamicResource PopupInfoBackgroundBrush}"
                     BorderBrush="Gray"
                     BorderThickness="1"
                     CornerRadius="4">
-                    <Border.Effect>
-                        <DropShadowEffect
+					<Border.Effect>
+						<DropShadowEffect
                             BlurRadius="3"
                             Direction="315"
                             Opacity="0.3"
                             ShadowDepth="6" />
-                    </Border.Effect>
-                    <!--<Border.Background>
+					</Border.Effect>
+					<!--<Border.Background>
 						<LinearGradientBrush StartPoint="0,0" EndPoint="0,1">
 							<GradientStop Offset="0.0" Color="White" />
 							<GradientStop Offset="1.0" Color="LightGray" />
 						</LinearGradientBrush>
 					</Border.Background>-->
-                    <ContentPresenter />
-                </Border>
-            </ControlTemplate>
-        </ResourceDictionary>
+					<ContentPresenter />
+				</Border>
+			</ControlTemplate>
+		</ResourceDictionary>
     </Application.Resources>
 </Application>
 
