--- a/VidCoder/Themes/Dark.xaml
+++ b/VidCoder/Themes/Dark.xaml
@@ -75,9 +75,20 @@
 	<SolidColorBrush x:Key="Button.Disabled.Foreground" Color="#DDDDDD" />
 
 
-	
-	
-	
+	<SolidColorBrush x:Key="OptionMark.Static.Background" Color="#FF000000"/>
+	<SolidColorBrush x:Key="OptionMark.Static.Border" Color="#FF969696"/>
+	<SolidColorBrush x:Key="OptionMark.Static.Glyph" Color="#FFEAEAEA"/>
+	<SolidColorBrush x:Key="OptionMark.MouseOver.Background" Color="#FF161616"/>
+	<SolidColorBrush x:Key="OptionMark.MouseOver.Border" Color="#FF406DBC"/>
+	<SolidColorBrush x:Key="OptionMark.MouseOver.Glyph" Color="#FFD8D8D8"/>
+	<SolidColorBrush x:Key="OptionMark.Disabled.Background" Color="#FF3D3D3D"/>
+	<SolidColorBrush x:Key="OptionMark.Disabled.Border" Color="#FF515151"/>
+	<SolidColorBrush x:Key="OptionMark.Disabled.Glyph" Color="#FF9E9E9E"/>
+	<SolidColorBrush x:Key="OptionMark.Pressed.Background" Color="#FF1A67AF"/>
+	<SolidColorBrush x:Key="OptionMark.Pressed.Border" Color="#FF7A9EDB"/>
+	<SolidColorBrush x:Key="OptionMark.Pressed.Glyph" Color="#FFEAEAEA"/>
+
+
 
 	<SolidColorBrush x:Key="ComboBox.Static.Background" Color="#282828" />
 	<SolidColorBrush x:Key="ComboBox.Static.Border" Color="#606060" />
