--- a/VidCoder/Themes/HighContrast.xaml
+++ b/VidCoder/Themes/HighContrast.xaml
@@ -56,6 +56,19 @@
 	<SolidColorBrush x:Key="Button.Disabled.Foreground" Color="{x:Static SystemColors.GrayTextColor}"/>
 
 
+	<SolidColorBrush x:Key="OptionMark.Static.Background" Color="{x:Static SystemColors.WindowColor}"/>
+	<SolidColorBrush x:Key="OptionMark.Static.Border" Color="{x:Static SystemColors.ControlDarkColor}"/>
+	<SolidColorBrush x:Key="OptionMark.Static.Glyph" Color="{x:Static SystemColors.WindowTextColor}"/>
+	<SolidColorBrush x:Key="OptionMark.MouseOver.Background" Color="{x:Static SystemColors.WindowColor}"/>
+	<SolidColorBrush x:Key="OptionMark.MouseOver.Border" Color="{x:Static SystemColors.HighlightColor}"/>
+	<SolidColorBrush x:Key="OptionMark.MouseOver.Glyph" Color="{x:Static SystemColors.WindowTextColor}"/>
+	<SolidColorBrush x:Key="OptionMark.Disabled.Background" Color="{x:Static SystemColors.WindowColor}"/>
+	<SolidColorBrush x:Key="OptionMark.Disabled.Border" Color="{x:Static SystemColors.GrayTextColor}"/>
+	<SolidColorBrush x:Key="OptionMark.Disabled.Glyph" Color="{x:Static SystemColors.GrayTextColor}"/>
+	<SolidColorBrush x:Key="OptionMark.Pressed.Background" Color="{x:Static SystemColors.WindowColor}"/>
+	<SolidColorBrush x:Key="OptionMark.Pressed.Border" Color="{x:Static SystemColors.ControlDarkColor}"/>
+	<SolidColorBrush x:Key="OptionMark.Pressed.Glyph" Color="{x:Static SystemColors.WindowTextColor}"/>
+
 
 	<SolidColorBrush x:Key="ComboBox.Static.Background" Color="{x:Static SystemColors.WindowColor}" />
 	<SolidColorBrush x:Key="ComboBox.Static.Border" Color="{x:Static SystemColors.ControlDarkColor}" />
