--- a/VidCoder/View/Panels/ContainerPanel.xaml
+++ b/VidCoder/View/Panels/ContainerPanel.xaml
@@ -11,7 +11,7 @@
 	d:DesignWidth="300"
 	mc:Ignorable="d">
 	<UserControl.Resources>
-		<Style x:Key="ContainerCheckBoxStyle" TargetType="CheckBox">
+		<Style x:Key="ContainerCheckBoxStyle" TargetType="CheckBox" BasedOn="{StaticResource CheckBoxBaseStyle}">
 			<Setter Property="Margin" Value="0 4 0 0" />
 		</Style>
 		<!--<Style TargetType="TextBlock">
