--- a/VidCoder/View/Panels/SizingPanel.xaml
+++ b/VidCoder/View/Panels/SizingPanel.xaml
@@ -309,8 +309,7 @@
 				<CheckBox
 					Margin="3"
 					Content="{x:Static res:EncodingRes.FlipHorizontalCheckBox}"
-					IsChecked="{Binding FlipHorizontal}"
-					Style="{StaticResource LongToolTipHolder}">
+					IsChecked="{Binding FlipHorizontal}">
 					<CheckBox.ToolTip>
 						<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.FlipHorizontalToolTip}" />
 					</CheckBox.ToolTip>
@@ -318,8 +317,7 @@
 				<CheckBox
 					Margin="3"
 					Content="{x:Static res:EncodingRes.FlipVerticalCheckBox}"
-					IsChecked="{Binding FlipVertical}"
-					Style="{StaticResource LongToolTipHolder}">
+					IsChecked="{Binding FlipVertical}">
 					<CheckBox.ToolTip>
 						<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:EncodingRes.FlipVerticalToolTip}" />
 					</CheckBox.ToolTip>
