--- a/VidCoder/View/QueueTitlesWindow.xaml
+++ b/VidCoder/View/QueueTitlesWindow.xaml
@@ -136,8 +136,7 @@
 				<CheckBox
 					Margin="0 10 0 0"
 					HorizontalAlignment="Left"
-					IsChecked="{Binding TitleStartOverrideEnabled}"
-					Style="{StaticResource LongToolTipHolder}">
+					IsChecked="{Binding TitleStartOverrideEnabled}">
 					<CheckBox.ToolTip>
 						<TextBlock Style="{StaticResource LongToolTip}" Text="{x:Static res:QueueTitlesRes.OverrideTitleNumberToolTip}" />
 					</CheckBox.ToolTip>
